k8s/all-service/reactive-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: reactive-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: reactive-service
  template:
    metadata:
      labels:
        app: reactive-service
    spec:
      containers:
      - env:
        - name: EUREKA_CLIENT_ENABLED
          value: "false"
        - name: SPRING_CLOUD_KUBERNETES_ENABLED
          value: "true"
        - name: SPRING_CLOUD_KUBERNETES_DISCOVERY_ENABLED
          value: "true"
        - name: SPRING_CLOUD_KUBERNETES_RELOAD_ENABLED
          value: "true"
        image: dhananjay12/demo-reactive-service:latest
        name: reactive-service
        imagePullPolicy: Always
        resources:
          requests:
            memory: "256Mi"
          limits:
            memory: "512Mi"
        ports:
          - containerPort: 8080
