k8s/all-service/websocket-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: websocketservice
spec:
  replicas: 1
  selector:
    matchLabels:
      app: websocketservice
  template:
    metadata:
      labels:
        app: websocketservice
    spec:
      containers:
      - env:
        - name: EUREKA_CLIENT_ENABLED
          value: "false"
        - name: SPRING_CLOUD_KUBERNETES_ENABLED
          value: "true"
        - name: SPRING_CLOUD_KUBERNETES_DISCOVERY_ENABLED
          value: "true"
        - name: SPRING_CLOUD_KUBERNETES_RELOAD_ENABLED
          value: "true"
        image: dhananjay12/demo-websocket-service:latest
        name: websocketservice
        imagePullPolicy: Always
        resources:
          requests:
            memory: "256Mi"
          limits:
            memory: "512Mi"
        ports:
          - containerPort: 8080
