k8s/all-service/gateway-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    name: gateway
  name: gateway
spec:
  type: ClusterIP
  selector:
    app: gateway
  ports:
  - port: 8080
    targetPort: 8080
    protocol: TCP
