k8s/all-service/reactive-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    name: reactive-service
  name: reactive-service
spec:
  type: ClusterIP
  selector:
    app: reactive-service
  ports:
  - port: 8080
    targetPort: 8080
    protocol: TCP
