k8s/all-service/service-two-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    name: service-two
  name: service-two
spec:
  type: ClusterIP
  selector:
    app: service-two
  ports:
  - port: 8080
    targetPort: 8080
    protocol: TCP
