k8s/all-service/ingress-service.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-backend-service
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  rules:
  - http:
      paths:
        - path: /api/.*
          pathType: Prefix
          backend:
            service:
             name: gateway
             port:
               number: 8080
        - path: /websocketservice/.*
          pathType: Prefix
          backend:
            service:
             name: gateway
             port:
               number: 8080
